--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>It's a new heading!</h1>
+        <h1>It's electric!</h1>
     </body>
 </html>
