--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>It's a title</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <h1>It's electric!</h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Potato Creek</title>
+</head>
+<body>
+    <h1>Welcome to Potato Creek</h1>
+</body>
 </html>
